log
Wed 20 Mar 2024 04:56:07 PM UTC: 
 tests:  0|5
total_score: 0/70
bc3a8a7
Wed 20 Mar 2024 04:57:27 PM UTC: 
 exercises.c | 55 +++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 49 insertions(+), 6 deletions(-)
 tests:  4|1
total_score: 50/70
afef9ab
Thu 21 Mar 2024 08:12:59 PM UTC: 
 exercises.c | 63 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 63 insertions(+)
In file included from test.c:5:
exercises.c:196:1: error: expected identifier or ‘(’ before ‘}’ token
  196 | }
      | ^
Compilation failed
3b5f36d
Thu 21 Mar 2024 08:13:29 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  9|0
total_score: 70/70
dfd0dcf
Thu 21 Mar 2024 08:20:46 PM UTC: 
 exercises.c | 22 ++++++++--------------
 1 file changed, 8 insertions(+), 14 deletions(-)
 tests:  9|0
total_score: 70/70
eeb503a
